--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "email-validator": "^2.0.4",
     "google-libphonenumber": "^3.2.2",
     "intel": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-body": "^1.7.0",
     "koa-router": "^7.4.0",
+    "lodash": "^4.17.13",
     "mongoose": "^5.5.14",
     "tape": "^4.10.2"
   },
-  "devDependencies": {},
   "scripts": {
-    "server": "nodemon src/entry.js",
+    "server": "nodemon src/entry.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
