--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "email-validator": "^2.0.4",
     "google-libphonenumber": "^3.2.2",
     "intel": "^1.2.0",
