--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@koa/cors": "^3.0.0",
     "email-validator": "^2.0.4",
     "google-libphonenumber": "^3.2.2",
-    "intel": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-body": "^1.7.0",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.13",
     "mongoose": "^5.5.14",
+    "nodemon": "^1.19.2",
     "tape": "^4.10.2"
   },
   "scripts": {
