--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "dp",
+  "name": "bulletin_board_server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@koa/cors": "^3.0.0",
-    "email-validator": "^2.0.4",
-    "google-libphonenumber": "^3.2.2",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.7.0",
-    "koa-body": "^1.7.0",
-    "koa-router": "^7.4.0",
-    "lodash": "^4.17.13",
-    "mongoose": "^5.5.14",
-    "nodemon": "^1.19.2",
-    "tape": "^4.10.2"
+    "@koa/cors": "3.0.0",
+    "email-validator": "2.0.4",
+    "google-libphonenumber": "3.2.5",
+    "jsonwebtoken": "8.5.1",
+    "koa": "2.10.0",
+    "koa-body": "4.1.1",
+    "koa-router": "7.4.0",
+    "lodash": "4.17.15",
+    "mongoose": "5.7.5",
+    "nodemon": "1.19.4",
+    "tape": "4.11.0"
   },
   "scripts": {
     "server": "nodemon src/entry.js ",
