--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bulletin_board_server",
+  "name": "bulletin.board.server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -31,6 +31,8 @@
   },
   "homepage": "https://github.com/iliser/loader#readme",
   "devDependencies": {
-    "eslint": "^6.5.1"
+    "eslint": "6.5.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.18.2"
   }
 }
