--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "@koa/cors": "3.0.0",
+    "@koa/router": "^8.0.2",
     "email-validator": "2.0.4",
     "google-libphonenumber": "3.2.5",
     "jsonwebtoken": "8.5.1",
     "koa": "2.10.0",
     "koa-body": "4.1.1",
-    "koa-router": "7.4.0",
     "lodash": "4.17.15",
     "mongoose": "5.7.5",
     "nodemon": "1.19.4",
