--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "8.5.1",
     "koa": "2.10.0",
     "koa-body": "4.1.1",
+    "koa-send": "^5.0.0",
     "lodash": "4.17.15",
     "mongoose": "5.7.5",
     "nodemon": "1.19.4",
