--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "bulletin.board.server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "@koa/cors": "3.0.0",
-    "@koa/router": "^8.0.2",
-    "email-validator": "2.0.4",
-    "google-libphonenumber": "3.2.5",
-    "jsonwebtoken": "8.5.1",
-    "koa": "2.10.0",
-    "koa-body": "4.1.1",
-    "koa-send": "^5.0.0",
-    "lodash": "4.17.15",
-    "mongoose": "5.7.5",
-    "nodemon": "1.19.4",
-    "tape": "4.11.0"
-  },
-  "scripts": {
-    "server": "nodemon src/entry.js ",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iliser/loader.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iliser/loader/issues"
-  },
-  "homepage": "https://github.com/iliser/loader#readme",
-  "devDependencies": {
-    "eslint": "6.5.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.18.2"
-  }
+    "name": "bulletin.board.server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "dependencies": {
+        "@koa/cors": "3.0.0",
+        "@koa/router": "^8.0.2",
+        "email-validator": "2.0.4",
+        "google-libphonenumber": "3.2.5",
+        "jsonwebtoken": "8.5.1",
+        "koa": "2.10.0",
+        "koa-body": "4.1.1",
+        "koa-send": "^5.0.0",
+        "lodash": "4.17.15",
+        "mongoose": "5.7.5",
+        "nodemon": "1.19.4",
+        "tape": "4.11.0"
+    },
+    "scripts": {
+        "server": "nodemon src/index.js ",
+        "test": "jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/iliser/loader.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/iliser/loader/issues"
+    },
+    "homepage": "https://github.com/iliser/loader#readme",
+    "devDependencies": {
+        "eslint": "6.5.1",
+        "eslint-plugin-jest": "^23.0.2",
+        "eslint-plugin-prettier": "^3.1.1",
+        "jest": "^24.9.0",
+        "prettier": "^1.18.2",
+        "supertest": "^4.0.2"
+    }
 }
